[tool.poetry]
name = "cg"
version = "0.1.0"
description = ""
authors = ["scc <scc@teamt5.org>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.4"
autopep8 = "^2.0.2"
argparse = "^1.4.0"
gitpython = "^3.1.37"
requests = "^2.31.0"
nuitka = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
