[tool.poetry]
name = "cg"
version = "1.0.1"
description = ""
authors = ["scc <scc@teamt5.org>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.4"
argparse = "^1.4.0"
gitpython = "^3.1.41"
requests = "^2.31.0"
nuitka = "^1.6.1"
black = "^24.4.2"
mypy-extensions = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
